refactor : 주생성자 순서 변경 및 가변인자 리스트 변경 방식 변경