@@ -1,9 +1,6 @@
 package nextstep.qna.domain;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import nextstep.qna.CannotDeleteException;
 import nextstep.users.domain.NsUser;
@@ -11,16 +8,16 @@ import nextstep.users.domain.NsUser;
 public class Answers {
     private final List<Answer> answers;
 
-    public Answers(List<Answer> answers) {
-        this.answers = answers;
-    }
-
     public Answers(Answer... answers) {
-        this(new ArrayList<>(Arrays.asList(answers)));
+        this(List.of(answers));
     }
 
     public Answers() {
         this(new ArrayList<>());
+    }
+
+    public Answers(List<Answer> answers) {
+        this.answers = answers;
     }
 
     public final List<DeleteHistory> delete(NsUser loginUser) throws CannotDeleteException {
